updated backend and started front
